2005-07-28 Alain Magloire
	Fix Pr 104421: The register did not update.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/RegisterManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Register.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/StackFrame.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Target.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Thread.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Value.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Variable.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/VariableDescriptor.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/type/ArrayValue.java

2005-07-26 Alain Magloire
	Fix for 92446
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/VariableManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Value.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Variable.java

2005-07-21 Alain Magloire
	Fix for PR 103193
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/LocationBreakpoint.java
	* src/org/eclipse/cdt/debug/mi/core/MIPlugin.java

2005-07-18 Alain Magloire
	GDB has now four different version of MI, so it has become
	important to give the user the choice of the version.
	* mi/org/eclipse/cdt/debug/mi/core/MISession.java
	* mi/org/eclipse/cdt/debug/mi/core/RxThread.java
	* mi/org/eclipse/cdt/debug/mi/core/command/CommandFactory.java
	* mi/org/eclipse/cdt/debug/mi/core/command/MICommand.java
	+ mi/org/eclipse/cdt/debug/mi/core/command/MIVersion.java
	* src/org/eclipse/cdt/debug/mi/core/GDBCDIDebugger.java
	* src/org/eclipse/cdt/debug/mi/core/GDBDebugger.java
	* src/org/eclipse/cdt/debug/mi/core/GDBServerCDIDebugger.java
	* src/org/eclipse/cdt/debug/mi/core/MIPlugin.java
	* src/org/eclipse/cdt/debug/mi/core/MIProcessAdapter.java

2005-07-10 Alain Magloire
	Fix for PR 100992: Setting breakpoints for methods
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManager.java

2005-07-07 Alain Magloire
	Try to suspend the target before disconnecting.